@startuml
'https://plantuml.com/class-diagram

class Person {
    - id: int
    - firstName: String
    - lastName: String
    - email: String
    - phone: String
    - hobbies: List<Hobby>
    + getter()
    + setter()
}
class Hobby {
    - id: int
    - name: String
    - description: String
    - persons: List<Person>
    + getter()
    + setter()
}
class Address {
    - street: String
    - additionalInfo: String
    + getter()
    + setter()
}
class CityInfo {
    - zipcode: String
    - city: String
    + getter()
    + setter()
}
class Phone {
    - number: String
    - description: String
    + getter()
    + setter()
}

Person "*" --o "*" Hobby
Person "*" --o "1" Address
Address "*" --o "1" CityInfo
Person "1" -- "*" Phone

@enduml